      flattening any structure created by intermediate groups.
    * Groups now allow you to use the command "removeTrovesAlsoInGroup"
      and "removeTrovesAlsoInNewGroup".  These commands subtract out the
      troves included within the specified group from the currently
      active group. (CNY-1380)
    * checking dependencies is now faster when building groups.
    * When resolving dependencies in groups, conary will now search the 
      latest trove in every label in your label/search path before
      searching back in the history of that label. (CNY-1312)
  
  o Server Changes:
    * Two new calls have been added to the server API -
      getTroveReferences and getTroveDescendants (CNY-1349)
    * Proxy server proxies put calls now
    * Cleaned up string compression code in changeset merging

  o Bug Fixes:
    * Fixed a bug where an invalid flavor at the command line would result
      in a traceback. (CNY-1070)
    * Added an exception to allow redirect recipe names to have any format -
      including those usually reserved for group- and info- packages.
    * Removed a harmful assert that kept trove source stacks from working w/o
      installLabelPaths in some cases. (CNY-1351)
    * The cfg.root item is always stored internally as an absolute path,
      even if it is specified as a relative path. (CNY-1276)
    * cvc now properly cleans up 000-permission files from the old build 
      directory. (CNY-1359)

  o Internal Changes:
    * Changesets in an update job can be downloaded in a step separate from
      the installation. Additionally, update jobs can be frozen and reapplied
      later. (CNY-1300)

Changes in 1.1.17:
  o New Feature:
    * A caching proxy has been implemented for Conary.  A proxy server
      caches changesets as clients request them.  This can
      dramatically improve the performance of Conary when a subsequent
      request is made for the same changeset.
